syntax = "proto3";

option csharp_namespace = "RapidTime.Api";

import "google/protobuf/empty.proto";
import "assignmentType.proto";

package price;

service Price {
  rpc GetPrice (GetPriceRequest) returns (PriceResponse);
  rpc MultiPrice (stream GetPriceRequest) returns (MultiPriceResponse);
  rpc CreatePrice (CreatePriceRequest) returns (PriceResponse);
  rpc UpdatePrice (UpdatePriceRequest) returns (PriceResponse);
  rpc DeletePrice (DeletePriceRequest) returns (google.protobuf.Empty);
}

message PriceBase{
  int32 id = 1;
  double hourlyRate = 2;
  
  assignmentType.AssignmentTypeBase assignmentType = 3;
}
message GetPriceRequest{
  int32 id = 1;
}

message PriceResponse {
  PriceBase response = 1;
}

message CreatePriceRequest{
  PriceBase request = 1;
}

message UpdatePriceRequest{
  PriceBase request = 1;
}

message DeletePriceRequest{
  int32 id = 1;
}

message MultiPriceResponse{
  repeated PriceResponse response = 1;
}