syntax = "proto3";

option csharp_namespace = "RapidTime.Frontend";

import "google/protobuf/empty.proto";

package assignmentType;

service AssignmentType {
  rpc GetAssignmentType (GetAssignmentTypeRequest) returns (AssignmentTypeResponse);
  rpc CreateAssignmentType (CreateAssignmentTypeRequest) returns (AssignmentTypeResponse);
  rpc UpdateAssignmentType (UpdateAssignmentTypeRequest) returns (AssignmentTypeResponse);
  rpc MultiAssignmentType (stream GetMultiAssignmentTypeRequest) returns (stream MultiAssignmentTypeResponse);
  rpc DeleteAssignmentType (DeleteAssignmentTypeRequest) returns (google.protobuf.Empty);
  rpc GetAllAssignmentType (google.protobuf.Empty) returns (MultiAssignmentTypeResponse);
}

message DeleteAssignmentTypeRequest {
    int32 id = 1;
}

message CreateAssignmentTypeRequest {
  string name = 1;
  string number = 2;
  bool invoiceAble = 3;
}

message MultiAssignmentTypeResponse {
  repeated AssignmentTypeResponse assignmentType = 1;
}

message UpdateAssignmentTypeRequest {
  int32 id = 1;
  string name = 2;
  string number = 3;
  bool invoiceAble = 4;
}

message GetAssignmentTypeRequest {
  int32 id = 1;
}

message GetMultiAssignmentTypeRequest {
  string input = 1;
}

message AssignmentTypeResponse {
  int32 id = 1;
  string name = 2;
  string number = 3;
  bool invoiceAble = 4;
}
